Fix scroll-y issue
When a scrollbar is not necessary the padding/spacing is not correct.

--- a/src/components/vueMultiSelect/vue-multi-select.css
+++ b/src/components/vueMultiSelect/vue-multi-select.css
@@ -249,7 +249,7 @@
   overflow: hidden;
   max-height: 300px;
   min-height: 80px;
-  overflow-y: scroll;
+  overflow-y: auto;
 
 }
 
